# coaching_dev

.github/workflows/: cd.yml
coaching_dev/: CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
coaching_dev/.github/workflows/: ci-cd.yml
coaching_dev/docs/: Makefile  conf.py  example.ipynb  make.bat
coaching_dev/src/coaching_dev/: __init__.py  black_white_tree.py  door_mat.py  fibo_matrix.py  rango_alpha.py
coaching_dev/tests/: test_black_white_tree.py  test_coaching_dev.py  test_draw_mat_door.py  test_draw_rangoli.py  test_fibo_matrix.py
myenv/: pyvenv.cfg
