[tool.poetry]
name = "coaching_dev"
version = "0.1.0"
description = "Margo dev coaching package"
authors = ["DS"]
license = "MIT"
readme = "README.md"
packages = [
    { include = "coaching_dev", from = "src" }
]
# Include files necessary for distribution
include = ["README.md", "CHANGELOG.md"]

[tool.poetry.dependencies]
python = "^3.12"

[tool.semantic_release]
version_toml = [
    "pyproject.toml:tool.poetry.version",
]                                                    # version location
branch = "main"                                      # branch to make releases of
changelog_file = "CHANGELOG.md"                      # changelog file
build_command = "pip install poetry && poetry build" # build dists 

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"
